Update Instagram Reach Analysis.ipynb

--- a/Instagram Reach Analysis.ipynb
+++ b/Instagram Reach Analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "e8fb7870",
    "metadata": {},
    "source": [
-    "We start by equipping the project with essential tools. Pandas and NumPy handle data efficiently, while Matplotlib, Seaborn, and Plotly Express create insightful visualizations. WordCloud dives into textual data nuances. Scikit-learn's train_test_split readies data for analysis, and PassiveAggressiveRegressor steps in for regression tasks. It's the foundation for data exploration and machine learning insights."
+    "We start by equipping the project with essential tools. Pandas and NumPy handle data efficiently, while Matplotlib, Seaborn, and Plotly Express create insightful visualizations. WordCloud dives into textual data nuances. Scikit-learn's train_test_split readies data for analysis, and different regression models step in for regression tasks. It's the foundation for data exploration and machine learning insights."
    ]
   },
   {
